sampler/chain/projects/lottie-android/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/LottieAnimationView.java:404: error: [NullAway] (INDEX= 76) (Covered) passing @Nullable parameter 'null' where @NonNull is required
          LottieCompositionFactory.fromRawRes(getContext(), rawRes) : LottieCompositionFactory.fromRawRes(getContext(), rawRes, null);
                                                                                                                                ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/parser/LayerParser.java:277: error: [NullAway] (INDEX= 273) (Covered) passing @Nullable parameter 'refId' where @NonNull is required
    return new Layer(shapes, composition, layerName, layerId, layerType, parentId, refId,
                                                                                   ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/parser/AnimatableTransformParser.java:136: error: [NullAway] (INDEX= 198) (Covered) passing @Nullable parameter 'skewAngle' where @NonNull is required
    if (isSkewAngleIdentity(skewAngle)) {
                            ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/LottieComposition.java:53: error: [NullAway] (INDEX= 37) (Covered) @NonNull field bounds not initialized
  private Rect bounds;
               ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/parser/ShapePathParser.java:49: error: [NullAway] (INDEX= 220) (Covered) passing @Nullable parameter 'name' where @NonNull is required
    return new ShapePath(name, ind, shape, hidden);
                         ^

	(see http://t.uber.com/nullaway )
